PORTFOLIO DESKTOP / Fix visible View work button

--- a/css/main.css
+++ b/css/main.css
@@ -5752,6 +5752,11 @@ button {
 .header-skills-item a {
   display: none;
 }
+@media (min-width: 1200px) {
+  .header-skills-item a {
+    display: inline-block;
+  }
+}
 .header-social-contacts {
   font-size: 30px;
   color: var(--text);
