--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -585,6 +585,11 @@
 
 .header-skills-item a{
     display: none;
+
+    @media (min-width: 1200px) {
+        display: inline-block;    
+    }
+
 }
 
 .header-social-contacts {
